--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
   "name": "@perfect-schema/tracker",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "Extends PerfectSchema instances with other schemas.",
   "author": "Yanick Rochon <yanick.rochon@gmail.com>",
   "license": "MIT",
-  "main": "src/tracker.js",
-  "browser": "dist/perfect-schema-tracker.min.js",
+  "main": "dist/tracker.js",
   "engines": {
     "node": ">= 8.2.1"
   },
   "scripts": {
-    "test": "jest --forceExit --detectOpenHandles",
+    "test": "BABEL_ENV=test jest --forceExit --detectOpenHandles",
     "test-cov": "npm run test -- --coverage",
     "lint": "eslint src --fix",
     "prepublishOnly": "BABEL_ENV=production gulp"
@@ -30,14 +29,11 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@perfect-schema/base": "^2.2.2",
-    "babel-eslint": "^8.2.6",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "babel-preset-stage-3": "^6.24.1",
-    "babelify": "^8.0.0",
-    "browserify": "^16.2.2",
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@perfect-schema/base": "^2.3.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^23.6.0",
     "eslint": "^5.4.0",
     "eslint-config-standard": "^11.0.0",
     "eslint-plugin-import": "^2.14.0",
@@ -45,35 +41,17 @@
     "eslint-plugin-promise": "^4.0.0",
     "eslint-plugin-standard": "^3.1.0",
     "gulp": "^4.0.0",
-    "gulp-buffer": "0.0.2",
-    "gulp-butternut": "^1.0.0",
-    "gulp-derequire": "^2.1.0",
-    "gulp-rename": "^1.4.0",
-    "gulp-sourcemaps": "^2.6.4",
-    "gulp-util": "^3.0.8",
+    "gulp-babel": "^8.0.0",
     "jest": "^23.5.0",
-    "meteor-standalone-tracker": "^1.0.97",
-    "vinyl-buffer": "^1.0.1",
-    "vinyl-source-stream": "^2.0.0"
+    "meteor-standalone-tracker": "^1.0.97"
   },
   "peerDependencies": {
     "meteor": "latest"
   },
   "babel": {
-    "env": {
-      "test": {
-        "presets": [
-          "env",
-          "es2015"
-        ]
-      },
-      "production": {
-        "presets": [
-          "es2015",
-          "stage-2"
-        ]
-      }
-    }
+    "presets": [
+      "@babel/preset-env"
+    ]
   },
   "jest": {
     "testMatch": [
