--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@perfect-schema/tracker",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Extends PerfectSchema instances with other schemas.",
   "author": "Yanick Rochon <yanick.rochon@gmail.com>",
   "license": "MIT",
@@ -29,20 +29,21 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@perfect-schema/base": "^2.4.0",
+    "@babel/core": "^7.3.3",
+    "@babel/preset-env": "^7.3.1",
+    "@perfect-schema/base": "^2.6.0",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^23.6.0",
-    "eslint": "^5.4.0",
-    "eslint-config-standard": "^11.0.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-node": "^7.0.1",
-    "eslint-plugin-promise": "^4.0.0",
-    "eslint-plugin-standard": "^3.1.0",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^24.1.0",
+    "eslint": "^5.14.1",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
     "gulp": "^4.0.0",
     "gulp-babel": "^8.0.0",
-    "jest": "^23.5.0",
+    "jest": "^24.1.0",
     "meteor-standalone-tracker": "^1.0.97"
   },
   "peerDependencies": {
